# vishwa-contract-babylon

./: Cargo.toml  NOTICE  README.md  env.sh
artifacts/: bridge_contract_cosmos.wasm  checksums.txt
config/: mywallet.key
scripts/: deploy.sh  optimizer.sh
src/: contract.rs
