[package]
name = "bridge-contract-cosmos"
version = "0.1.0"
authors = ["lindavishwa <linda@vishwanetwork.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
# optimize = """docker run --rm -v "$(pwd)":/code \
#   --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
#   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
#   cosmwasm/optimizer:0.15.0
# """
optimize = './scripts/optimizer.sh'
deploy = './scripts/deploy.sh'

[dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = "2.0.2"
cw2 = "2.0.0"
cw20 = "2.0.0-rc.0"
cw-controllers = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
cw-multi-test = "2.0.0"
